--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -29,7 +29,7 @@
               <a class="grow" href="#">Contact</a>
             </div>
             <div class="header-right">
-              
+
                 <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
 
             </div>
@@ -37,17 +37,17 @@
         </header>
 
         <div class="container">
-          <div class="hero">
-            <div class="headline">
-              Innovation
-              <br> On
-              <br> Demand
+          <div class="headline">
+            <div class="headline-left">
+              <div class="top">
+                Innovation <br> On <br> Demand
+              </div>
               <div class="button">
                 <span>Get Started</span>
               </div>
             </div>
-            <div class="image-container">
-
+            <div class="headline-right">
+              <img src="./img/header-img.png" alt="">
             </div>
           </div>
           <hr>
