--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -21,12 +21,12 @@
         <header>
           <div class="header-content">
             <div class="header-left">
-              <a class="grow" href="#">Services</a>
-              <a class="grow" href="#">Product</a>
-              <a class="grow" href="vision.html">Vision</a>
-              <a class="grow" href="#">Features</a>
-              <a class="grow" href="#">About</a>
-              <a class="grow" href="#">Contact</a>
+              <a href="services.html">Services</a>
+              <a href="#">Product</a>
+              <a href="vision.html">Vision</a>
+              <a href="#">Features</a>
+              <a href="#">About</a>
+              <a href="#">Contact</a>
             </div>
             <div class="header-right">
 
