--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -25,9 +25,9 @@
       <a href="#">Contact</a>
     </div>
     <div class="header-right">
-
-      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-
+      <a href="index.html">
+        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+      </a>
     </div>
   </div>
 </header>
